<resources>
    <string name="app_name">PHS Mobile</string>
    <string name="loading">Loading…</string>
    <string name="test">Test asset, ignore</string>
    <string name="calendar">Calendars</string>
    <string name="counselingbutton">counseling button</string>
    <string name="calendaract">calendar button</string>
    <string name="newsact">news button</string>
    <string name="sap">Students and Parents</string>
    <string name="academics">Academics</string>
    <string name="academicsact">academics button</string>
    <string name="finearts">Fine Arts</string>
    <string name="athletics">Athletics</string>
    <string name="pgact">photo gallery button</string>
    <string name="abtpenn">About Penn</string>
    <string name="news">News</string>
    <string name="psite">Penn Website</string>
    <string name="staff">Staff Links</string>
    <string name="athbtn">athletics button</string>
    <string name="clubsbtn">clubs button</string>
    <string name="aslClub">American Sign Language (ASL) Club</string>
    <string name="pennAmnesty">Amnesty International</string>
    <string name="artClub">Art Club</string>
    <string name="bookClub">Book Club</string>
    <string name="bowlingClub">Bowling Club</string>
    <string name="chessClub">Chess Club</string>
    <string name="chineseClub">Chinese Club</string>
    <string name="composersForum">Composers Forum</string>
    <string name="computerClub">Computer Club</string>
    <string name="DECA">DECA</string>
    <string name="dreamCS">Dream Commission Society</string>
    <string name="dronesRCClub">Drones and Remote Sensing R/C Club</string>
    <string name="OldNewBorrowedBlue">Doctor Who Club</string>
    <string name="EconAndInvestClub">Economics and Investment Club</string>
    <string name="FACSClub">FACS Club</string>
    <string name="FCA">Fellowship of Christian Atheletes</string>
    <string name="FIRSTRobotics">FIRST Robotics FTC, FRC Team</string>
    <string name="frenchClub">French Club</string>
    <string name="FotLC">Friends of the Library Club</string>
    <string name="FFAPHM">FFA, PHM (Furture For Agriculture)</string>
    <string name="gameClub">Game Club</string>
    <string name="GSA">Gay-Straight Alliance (GSA)</string>
    <string name="germanClub">German Club</string>
    <string name="HFH">Habitat for Humanity (must be 16 years old)</string>
    <string name="handwrittenHeartsClub">Handwritten Hearts Club</string>
    <string name="hockey">Hockey</string>
    <string name="iBall">Intramural Basketball (I-ball)</string>
    <string name="intraVolleyCoed">Intramural Volleyball Coed</string>
    <string name="japaneseClub">Japanese Club</string>
    <string name="JROTC">JROTC Club</string>
    <string name="keyClub">Key Club</string>
    <string name="kingsmenAC">Kingsmen Against Cancer</string>
    <string name="kingsmenC">Kingsmen Court</string>
    <string name="kingsmenFAD">Kingsmen Fight Against Diabetes</string>
    <string name="koreanClub">Korean Club</string>
    <string name="lacrosse">Lacrosse</string>
    <string name="nationalHS">National Honor Society</string>
    <string name="p7Bible">P7 Bible Club</string>
    <string name="pennMed">Penn Medical Club</string>
    <string name="PNN">Penn News Network</string>
    <string name="pennPC">Penn Political Coalition</string>
    <string name="pennSC">Penn Strength and Conditioning</string>
    <string name="pennVetClub">Penn Vet Club</string>
    <string name="powderPuff">Powder Puff Football</string>
    <string name="relay4Life">Relay for Life</string>
    <string name="SADD">SADD</string>
    <string name="saltNLight">Salt And Life</string>
    <string name="scienceResearch">Science Research Club</string>
    <string name="spanishClub">Spanish Club</string>
    <string name="TSA">Technology Students Association</string>
    <string name="theatreClub">Theatre Club</string>
    <string name="ultimateFrisbee">Ultimate Frisbee Club</string>
    <string name="writersGuild">Writers\' Guild</string>
    <string name="hourTheatre">24-Hour Theatre/Talent Show</string>
    <string name="clubs">Clubs</string>
    <string name="counseling">Counseling</string>
    <string name="contact_us">Contact Us</string>
    <string name="clubs_button">clubs button</string>
    <string name="introtext">Penn High School is a large public high school located in suburban northern Indiana. As the flagship school of the Penn-Harris-Madison School Corporation, Penn serves all the district’s 9th through 12th grade students as well as hundreds of out-of-district students who have made Penn High School their school of choice.</string>
    <string name="introtext2">Penn\'s national reputation for excellence is based on its outstanding academic, athletic and fine arts programs.</string>
    <string name="introstats">Penn is an elite 90–25–90 School because it exceeds three critical benchmarks of academic success, including graduation rate. Penn’s graduation rate is over 97%!</string>
    <string name="introtext3">The Penn High community is focused on graduating responsible young adults who are college and career ready.</string>
    <string name="points_of_pride">Points of Pride</string>
    <string name="POP1">US News and World Report included Penn on its list of national “Best High Schools”</string>
    <string name="POP2">The Washington Post identified Penn as one of “America’s Most Challenging High Schools”</string>
    <string name="POP3">The Indiana Department of Education has named Penn a 4-Star School for four consecutive years</string>
    <string name="POP4">Indiana Department of Education recognized Penn as a School of Promising Practices for its delivery of “Problem-based Learning”</string>
    <string name="POP5">Penn’s STEM Academy has been certified as a Full STEM Certified Program by the Indiana Department of Education.</string>
    <string name="POP6">All of this is made possible by Penn’s exemplary teachers, educational support staff and guidance counselors led by Mr. Steve Hope, 2015 Indiana Principal of the Year.</string>
    <string name="quick_facts">Quick Facts</string>
    <string name="enrollmentfact">2016–2017 enrollment: 3,517</string>
    <string name="tasfact">Teachers and Staff: approximately 300</string>
    <string name="schedule">Start time: 8:25 a.m. Dismissal: 3:17 p.m.</string>
    <string name="schoolcolors">School colors: Black and Gold</string>
    <string name="mascot">Mascot/nickname: The Kingsmen</string>
    <string name="constructed_1958">Constructed: 1958</string>
    <string name="extensively_renovated_1996">Extensively renovated: 1996</string>
    <string name="buildingsize">Building size: 581,621 sq. ft.</string>
    <string name="class_structure">Class structure: Four-Block schedule in every-other-day rotation</string>
    <string name="schoolschedule">School year: 180 day traditional calendar (Aug-June)</string>
    <string name="abouttext">About Penn</string>
    <string name="comittedexcelence">Penn High School is committed to excellence in education!</string>
    <string name="parents_and_students_button">Parents and Students Button</string>
    <string name="staff_button">Staff Button</string>
    <string name="open_pennant">Open The Pennant</string>
    <string name="baseball">Baseball</string>
    <string name="title_activity_athletics">Ugh</string>
    <string name="football">Football</string>
    <string name="girlssports">Girls\' Sports</string>
    <string name="boyssports">Boys\' Sports</string>
    <string name="noentries">No entries at this time, check The Pennant for more information.</string>
    <string name="noTitle">No Title Available</string>
    <string name="program_of_studies">Program of Studies</string>
    <string name="alted_information">Alternative Education Information</string>
    <string name="links">HAC/Canvas/Academic Links</string>
    <string name="programofstudiesInfo">Our mission is to provide an educational environment for students to reach their highest academic achievement. We will prepare them to be responsible citizens with the skills to be lifelong learners ready to adapt to a changing world.</string>
    <string name="altedInfo">P-H-M offers two alternative programs designed to provide each student with the resources and support necessary to successfully complete a program of studies leading to a high school diploma as well as obtain marketable work skills.</string>
    <string name="linksInfo">Penn High School enhances student achievement and supports student learning through the use of many digital resources.</string>
    <string name="HACInfotext">Home Access Center is the website Penn uses to track students\' grades, manage scheduling, and track student attendance. This button will take you to the login page.</string>
    <string name="HACText">Home Access Center (HAC)</string>
    <string name="CanvasInfotext">Canvas is the system Penn teachers use to distribute agendas and assignments to students throughout the year. This button will take you to the login page.</string>
    <string name="CanvasText">PHM Canvas</string>
    <string name="CleverInfotext">HOLDER TEXT. HOLDER TEXT. HOLDER TEXT. HOLDER TEXT. HOLDER TEXT. HOLDER TEXT. HOLDER TEXT. HOLDER TEXT. HOLDER TEXT. HOLDER TEXT. </string>
    <string name="CleverText">Clever</string>
    <string name="backInfoText">This button will take you back to the previous page.</string>
    <string name="backText">Back</string>
    <string name="credits">App developed by Riley Clauss and Micah Focht. Art by James Morris.</string>
    <string name="Athleticsmisc">Misc.</string>
    <string name="tac">TAC</string>
    <string name="aesop">Aesop</string>
    <string name="tacInfoText">Teacher Access Center (TAC) is a browser-based student information system that allows you to view and record information about the students for whom you are responsible. TAC can be used by teachers, substitutes, and activity advisors.</string>
    <string name="aesopInfoText">AESOPFILLERTEXTAESOPFILLERTEXTAESOPFILLERTEXTAESOPFILLERTEXTAESOPFILLERTEXTAESOPFILLERTEXTAESOPFILLERTEXTAESOPFILLERTEXT</string>
    <string name="search_directory">Search Directory</string>
    <string name="staff_name">Staff Name</string>
    <string name="staff_position">Staff Position</string>
    <string name="main_office">Main Office:</string>
    <string name="_574_258_9500">(574) 258-9500</string>
    <string name="attendance">Attendance:</string>
    <string name="_574_258_9501">(574) 258-9501</string>
    <string name="address">Address:</string>
    <string name="schooladdress">Penn High School, 56100 Bittersweet Rd., Mishawaka, IN 46545</string>

</resources>
