<?xml version="1.0" encoding="utf-8"?>
<!-- -=Buddha=-
                                  _
                               _ooOoo_
                              o8888888o
                              88" . "88
                              (| -_- |)
                              O\  =  /O
                           ____/`- -'\____
                         .'  \\|     |//  `.
                        /  \\|||  :  |||//  \
                       /  _||||| -:- |||||_  \
                       |   | \\\  -  /'| |   |
                       | \_|  `\`- -'//  |_/ |
                       \  .-\__ `-. -'__/-.  /
                     ___`. .'  / -. -\  `. .'___
                  ."" '<  `.___\_<|>_/___.' _> \"".
                 | | :  `- \`. ;`. _/; .'/ /  .' ; |
                 \  \ `-.   \_\_`. _.'_/_/  -' _.' /
       ===========`-.`___`-.__\ \___  /__.-'_.'_.-'================
                               `= -=-'
                               may your code be bug free-->


    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:theme="@style/NewPennTheme"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        tools:context="com.phsapp.phsapp.MainActivity"
        android:background="@drawable/background"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

    <TableRow

        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:paddingTop="30dp">

        <ImageButton
            android:id="@+id/NewsIcon"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight=".2"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/newsact"
            android:cropToPadding="false"
            android:onClick="onClick"
            android:scaleType="fitCenter"
            android:tag='n'
            app:srcCompat="@drawable/news" />

        <ImageButton
            android:id="@+id/CalendarButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".2"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/calendaract"
            android:cropToPadding="false"
            android:onClick="onClick"
            android:scaleType="fitCenter"
            android:tag='c'
            app:srcCompat="@drawable/calendar" />

        <ImageButton
            android:id="@+id/PASButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight=".2"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/parents_and_students_button"
            android:cropToPadding="false"
            android:onClick="onClick"
            android:scaleType="fitCenter"
            android:tag='y'
            app:srcCompat="@drawable/parents_and_students" />

        <ImageButton
            android:id="@+id/AcademicsButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight=".2"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/academicsact"
            android:cropToPadding="false"
            android:onClick="onClick"
            android:scaleType="fitCenter"
            android:tag='a'
            app:srcCompat="@drawable/academicsicon" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/NewsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/news"
            android:textColor="?attr/colorControlNormal"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/CalendarText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/calendar"
            android:textColor="?attr/colorControlNormal"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/PASText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:ems="10"
            android:gravity="center_vertical|fill_vertical|center_horizontal"
            android:lines="2"
            android:text="@string/sap"
            android:textColor="?attr/colorControlNormal"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/AcademicsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/academics"
            android:textColor="?attr/colorControlNormal"
            android:textSize="12sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp">

        <ImageButton
            android:id="@+id/CounselingButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight=".25"
            android:adjustViewBounds="false"
            android:background="@null"
            android:contentDescription="@string/counselingbutton"
            android:cropToPadding="false"
            android:onClick="onClick"
            android:scaleType="fitCenter"
            android:tag='o'
            app:srcCompat="@drawable/counselingicon" />

        <ImageButton
            android:id="@+id/AthleticsButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight=".25"
            android:adjustViewBounds="true"
            android:background="@null"
            android:clickable="true"
            android:contentDescription="@string/athbtn"
            android:cropToPadding="false"
            android:onClick="onClick"
            android:scaleType="fitCenter"
            android:tag='t'
            app:srcCompat="@drawable/athleticsiconnew" android:focusable="true"/>

        <ImageButton
            android:id="@+id/fartsbutton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight=".25"
            android:background="@null"
            android:clickable="true"
            android:contentDescription="@string/finearts"
            android:onClick="onClick"
            android:scaleType="fitCenter"
            android:tag='f'
            app:srcCompat="@drawable/finearts" android:focusable="true"/>

        <ImageButton
            android:id="@+id/ClubsButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight=".25"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/clubs_button"
            android:cropToPadding="false"
            android:onClick="onClick"
            android:scaleType="fitCenter"
            android:tag='l'
            app:srcCompat="@drawable/clubs" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/CounselingText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/counseling"
            android:textColor="?attr/colorControlNormal"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/AthleticsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:paddingLeft="0dp"
            android:paddingStart="0dp"
            android:text="@string/athletics"
            android:textColor="?attr/colorControlNormal"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/FineArtsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:paddingLeft="0dp"
            android:paddingStart="0dp"
            android:text="@string/finearts"
            android:textColor="?attr/colorControlNormal"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/ClubsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/clubs"

            android:textColor="?attr/colorControlNormal"
            android:textSize="12sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp">

        <ImageButton
            android:id="@+id/StaffIcon"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight=".25"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/staff_button"
            android:clickable="true"
            android:cropToPadding="false"
            android:onClick="onClick"
            android:scaleType="fitCenter"
            android:tag='z'
            app:srcCompat="@drawable/key"
            android:focusable="true" />

        <ImageButton
            android:id="@+id/PhotoGalleryButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight=".25"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/pgact"
            android:cropToPadding="false"
            android:onClick="onClick"
            android:scaleType="fitCenter"
            android:tag='p'
            app:srcCompat="@drawable/photogallery" />

        <ImageButton
            android:id="@+id/ContactUsButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight=".25"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/contact_us"
            android:cropToPadding="false"
            android:onClick="onClick"
            android:scaleType="fitCenter"
            android:tag='x'
            app:srcCompat="@drawable/contact_us" />

        <ImageButton
            android:id="@+id/AboutUsButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight=".25"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/abouttext"
            android:cropToPadding="false"
            android:onClick="onClick"
            android:scaleType="fitCenter"
            android:tag='u'
            app:srcCompat="@drawable/abouticon" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/StaffText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:paddingLeft="0dp"
            android:paddingStart="0dp"
            android:text="@string/staff"
            android:textColor="?attr/colorControlNormal"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/PhotoGalleryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/pgallery"
            android:textColor="?attr/colorControlNormal"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/ContactUsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"

            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/contact_us"
            android:textColor="?attr/colorControlNormal"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/AboutText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:paddingLeft="0dp"
            android:paddingStart="0dp"
            android:text="@string/abtpenn"
            android:textColor="?attr/colorControlNormal"
            android:textSize="12sp" />

    </TableRow>
    </TableLayout>
